crates/lib/tests/deserializers/avro/snapshots/r#mod__deserializers__avro__avro_record_unknown_primitive_type.snap
---
source: crates/lib/tests/deserializers/avro/mod.rs
expression: record
---
{
  "topic": "my-topic",
  "timestamp": 0,
  "partition": 0,
  "offset": 0,
  "headers": {},
  "key_schema": {
    "id": 1,
    "schema_type": "AVRO"
  },
  "value_schema": {
    "id": 3,
    "schema_type": "AVRO"
  },
  "size": 380,
  "key": {
    "id": "2c78a422-fe06-4adb-9d88-ca4dfb941cbc",
    "sunny": false
  },
  "value": "  Yozefu Error: The avro schema could not be parsed. Please check the schema in the schema registry.\n       Error: Unknown primitive type: io.maif.yozefu.Point\n       Payload: [0, 0, 0, 4, 61, 10, 215, 163, 112, 29, 68, 64, 154, 153, 153, 153, 153, 153, 40, 64, 0, 28, 8, 99, 105, 116, 121, 4, 34, 78, 101, 117, 105, 108, 108, 121, 45, 80, 108, 97, 105, 115, 97, 110, 99, 101, 20, 105, 109, 112, 111, 114, 116, 97, 110, 99, 101, 6, 0, 16, 112, 111, 115, 116, 99, 111, 100, 101, 4, 10, 57, 51, 51, 54, 48, 10, 95, 116, 121, 112, 101, 4, 14, 97, 100, 100, 114, 101, 115, 115, 10, 108, 97, 98, 101, 108, 4, 102, 67, 104, 101, 109, 105, 110, 32, 100, 101, 115, 32, 80, 101, 108, 111, 117, 115, 101, 115, 32, 100, 39, 65, 118, 114, 111, 110, 32, 57, 51, 51, 54, 48, 32, 78, 101, 117, 105, 108, 108, 121, 45, 80, 108, 97, 105, 115, 97, 110, 99, 101, 8, 116, 121, 112, 101, 4, 12, 115, 116, 114, 101, 101, 116, 10, 115, 99, 111, 114, 101, 6, 0, 16, 99, 105, 116, 121, 99, 111, 100, 101, 4, 10, 57, 51, 48, 52, 57, 12, 115, 116, 114, 101, 101, 116, 4, 54, 67, 104, 101, 109, 105, 110, 32, 100, 101, 115, 32, 80, 101, 108, 111, 117, 115, 101, 115, 32, 100, 39, 65, 118, 114, 111, 110, 8, 110, 97, 109, 101, 4, 54, 67, 104, 101, 109, 105, 110, 32, 100, 101, 115, 32, 80, 101, 108, 111, 117, 115, 101, 115, 32, 100, 39, 65, 118, 114, 111, 110, 2, 120, 6, 132, 146, 81, 14, 99, 111, 110, 116, 101, 120, 116, 4, 74, 57, 51, 44, 32, 83, 101, 105, 110, 101, 45, 83, 97, 105, 110, 116, 45, 68, 101, 110, 105, 115, 44, 32, 195, 142, 108, 101, 45, 100, 101, 45, 70, 114, 97, 110, 99, 101, 2, 121, 6, 252, 234, 197, 6, 4, 105, 100, 4, 20, 57, 51, 48, 52, 57, 95, 48, 57, 54, 48, 0]\n        String: "
}
