crates/lib/tests/deserializers/avro/snapshots/r#mod__deserializers__avro__avro_record_with_multiple_schema_references.snap
---
source: crates/lib/tests/deserializers/avro/mod.rs
assertion_line: 119
expression: record
---
{
  "topic": "my-topic",
  "timestamp": 0,
  "partition": 0,
  "offset": 0,
  "headers": {},
  "key_schema": {
    "id": 1,
    "schema_type": "AVRO"
  },
  "value_schema": {
    "id": 4,
    "schema_type": "AVRO"
  },
  "size": 82,
  "key": {
    "id": "2c78a422-fe06-4adb-9d88-ca4dfb941cbc",
    "sunny": false
  },
  "value": {
    "geometry": {
      "MetaGeometry": {
        "value": "shared value"
      },
      "coordinates": [
        1.0,
        2.0
      ],
      "type": "Point"
    },
    "type": "Feature"
  }
}
